k8s-lab/nginx-config-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-config-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-config
  template:
    metadata:
      labels:
        app: nginx-config
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
