k8s-lab/nginx-secret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-secret-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-secret
  template:
    metadata:
      labels:
        app: nginx-secret
    spec:
      containers:
      - name: nginx
        image: nginx
