k8s-lab/nginx-nfs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nfs-svc
spec:
  type: NodePort
  selector:
    app: nginx-nfs
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30091
