k8s-lab/nginx-pv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pv-svc
spec:
  type: NodePort
  selector:
    app: nginx-pv
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
