k8s-lab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pv-svc
spec:
  selector:
    app: nginx-pv
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
